--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "fs": "^0.0.1-security",
+    "gh-pages": "^5.0.0",
     "mongodb": "^5.0.0",
     "mysql2": "^3.0.1",
     "nodemon": "^2.0.20",
