--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "path": "^0.12.7",
     "sequelize": "^6.28.0"
   },
-  "homepage":"https://marcoking13.github.io/cfs/",
+  "homepage":"https://customfacilityservices.herokuapp.com/",
   "scripts": {
   "predeploy": "nodemon server.js",
   "deploy": "gh-pages -d build"
