--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "body-parser": "^1.20.1",
+    "detect-browser": "^5.3.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
@@ -13,9 +14,9 @@
     "path": "^0.12.7",
     "sequelize": "^6.28.0"
   },
-  "homepage":"https://customfacilityservices.herokuapp.com/",
+  "homepage": "https://customfacilityservices.herokuapp.com/",
   "scripts": {
-  "predeploy": "nodemon server.js",
-  "deploy": "gh-pages -d build"
+    "predeploy": "nodemon server.js",
+    "deploy": "gh-pages -d build"
   }
 }
