--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^5.0.0",
     "mongodb": "^5.0.0",
     "mysql2": "^3.0.1",
+    "node-sass": "^9.0.0",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "sequelize": "^6.28.0"
